@@ -1,8 +1,11 @@
-CHANGES.txt - 10/20/2005
+CHANGES.txt - 10/24/2005
 ------------------------
 
 CHANGES IN CUPS V1.2.0b1
 
+	- The scheduler now only updates the permissions of SSL
+	  keys and certificates when they are under the
+	  ServerRoot directory (STR #1324)
 	- The rastertodymo driver has been renamed to
 	  rastertolabel (a symlink is installed so that existing
 	  queues continue to work) and now also supports Zebra's
